# typeDiagram

./: .deslop.toml  .gitignore  .mcp.json  CONTRIBUTING.md  Cargo.toml  Claude.md  Makefile  README.md  SECURITY.md  coverage-thresholds.json  package-lock.json  package.json  rustfmt.toml  shipwright.json
.claude/: settings.local.json
.claude/skills/spec-check/: SKILL.md
.claude/skills/upgrade-packages/: SKILL.md
.claude/skills/website-audit/: SKILL.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  deploy-pages.yml  release.yml
crates/: README.md
crates/tdbin/: Cargo.toml
crates/tdbin/benches/: gate.rs
crates/tdbin/examples/: bench.rs  bench_data.rs  profile.rs
crates/tdbin/fuzz/: Cargo.toml
crates/tdbin/fuzz/fuzz_targets/: decode.rs
crates/tdbin/src/: column.rs  column_read.rs  error.rs  frame.rs  intblock.rs  layout.rs  lib.rs  pack.rs  pointer.rs  reader.rs  reader_lists.rs  reflect.rs  scalar.rs  verify.rs  writer.rs  writer_lists.rs
crates/tdbin/tests/: columns.rs  evolution.rs  frame.rs  fuzz_decode.rs  golden.rs  golden_columnar.rs  lists.rs  pack.rs  packing.rs  reflect.rs  roundtrip.rs  size_gate.rs  verification.rs
crates/tdbin/tests/generated_batches/: mod.rs
crates/tdbin/tests/generated_corpus/: mod.rs
crates/tdbin/tests/generated_opt/: mod.rs
crates/tdbin/tests/support/: batch_corpus.rs  bench_corpus.rs  document_corpus.rs  event_corpus.rs  hexvectors.rs  persons.rs
docs/benchmarks/: tdbin-corpus.proto  tdbin-corpus.td
docs/design/blog-grid/: code.html
docs/design/blog-page/: code.html
docs/design/docs/: code.html
docs/plans/: marketplace-oidc-and-0.11.0.md  pdf-export.md  render-hooks.md  tdbin-implementation-plan.md
docs/reports/: tdbin-bench-data.json  tdbin-bench-report.md  tdbin-implementation-audit.md
docs/research/: binary-format-research.md
docs/shared/: intro.md
docs/specs/: api.md  cli.md  converters.md  getting-started.md  language-reference.md  multi-language-pipeline.md  pdf-export.md  render-hooks.md  tdbin-benchmarks.md  tdbin-columnar.md  tdbin-future-columnar.md  tdbin-future-reader.md  tdbin-future-typescript.md  tdbin-future-width-types.md  tdbin-rust-api.md  tdbin-wire-format.md  tdbin.md  tdrpc.md  typeshed-conversion.md
schemas/: shipwright.schema.json
scripts/: tdbin-bench-report.mjs  tdbin-regen-fixtures.mjs  tdbin-spec-trace.mjs  tsconfig.json  vitest-config-base.ts
