# agent-pmo:372ce7f
# Rust workspace for typeDiagram — REPO-STANDARDS-SPEC [LINT-RUST].
#
# Crates live under `crates/` and inherit the strict lint table below by adding
#
#     [lints]
#     workspace = true
#
# to their own Cargo.toml. Turn ALL lints on and up to `deny`; the only sanctioned
# exceptions are the documented ones below. `make fmt`/`make lint`/`make test`
# gain `cargo fmt`/`cargo clippy`/`cargo llvm-cov` steps once the first crate lands.
#
# NOTE: until the first crate is added under `crates/`, `cargo build` reports an
# empty workspace — expected while Rust is being introduced.
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Nimblesite/typeDiagram"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
missing_debug_implementations = "deny"
unused_imports = "deny"
dead_code = "deny"
unused_variables = "deny"
unused_mut = "deny"
unused_assignments = "deny"
unused_results = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
elided_lifetimes_in_paths = "deny"
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "deny"
arithmetic_side_effects = "deny"
missing_docs_in_private_items = "deny"

# NOTE: `float_arithmetic = "deny"` is INTENTIONALLY NOT enabled here. It is right
# for a narrow class of repos (crypto, consensus, money, reproducible hashing)
# where IEEE-754 non-associativity is a correctness hazard, but too aggressive for
# general-purpose code (scoring, stats, geometry, layout math — typeDiagram's SVG
# layout is exactly this). If a specific crate needs bit-exact float-free math, add
# `#![deny(clippy::float_arithmetic)]` at that crate's root — do NOT promote it here.
