# [TDBIN-RS-CRATE] TDBIN v0 runtime: the compact binary codec that generated
# typeDiagram ADT code targets. Zero external deps so it builds offline; the
# `thiserror`/`tracing` wiring lands with the logging pass ([TDBIN-RS-LOG]).
[package]
name = "tdbin"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TDBIN v0: compact binary codec runtime for typeDiagram algebraic data types."
publish = false

[lints]
workspace = true
